# agent-issues

./: LICENSE  agent-issues-zshrc.sh  install.sh  pyproject.toml  worktree.sh
agent_issues/: issue_files.py  json5_utils.py  json5_writer.py  local_claims.py
agent_issues/cli/: __init__.py  agent_preflight.py  agent_submit.py  branch_summary.py  coding_agent_here.py  common.py  issue_abandon.py  issue_autoclaim.py  issue_claim.py  issue_finalize_pr.py  issue_fmt.py  issue_lint.py  issue_query.py  issue_watch_pr.py  worktree_common.py  worktree_new.py  worktree_rm.py  worktree_unrm.py
doc/: issues.md
doc/plans/: 2026-04-19-agent-submit.md
doc/specs/: 2026-04-19-agent-submit-design.md
skills/abandon-issue/: SKILL.md
skills/create-pr/: SKILL.md
skills/solve-issue/: SKILL.md
skills/solve-issue-eager/: SKILL.md
skills/submit-pr/: SKILL.md
tests/: test_abandon_issue.py  test_agent_preflight.py  test_agent_submit.py  test_autoclaim_issue.py  test_branch_summary.py  test_coding_agent_here.py  test_fmt_issues.py  test_json5_writer.py  test_lint_issues.py  test_watch_pr.py
