[project]
name = "agent-issues"
version = "0.1.0"
description = "File-based issue tracking for AI coding agents"
requires-python = ">=3.11"
dependencies = [
    "pyjson5>=1.6",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_issues"]

[tool.pytest.ini_options]
testpaths = ["tests"]
